--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -224,13 +224,16 @@ h1,h2,h3,h4,h5
         height: 100vh;
         overflow: hidden;
     }
-    #home .bubbles
+
+#home .bubbles
     {
         position: relative;
         display: flex;
         border: white;
+        margin-top: 5vh;
     }
-    #home .bubbles span
+
+#home .bubbles span
     {
         position: relative;
         width: 30px;
@@ -244,7 +247,8 @@ h1,h2,h3,h4,h5
         animation: animate 15s linear infinite;
         animation-duration: calc(120s/ var(--i));
     }
-    #home .bubbles span:nth-child(even)
+
+#home .bubbles span:nth-child(even)
     {
         background: #ff2d75;
         box-shadow: 0 0 0 10px #ff2d7544,
